# excelstream

./: .env.example  .gitignore  ARCHITECTURE_DIAGRAM.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPROVEMENT_PLAN.md  PERFORMANCE_S3.md  PHASE3_PLAN.md  README.md  RELEASE_NOTES_V0.9.0.md  RELEASE_v0.14.0.md
.github/.github/: FUNDING.yml
.github/workflows/: rust.yml
benches/: streaming_benchmark.rs
examples/: README.md  auto_memory_config.rs  basic_write.rs  cell_formatting.rs  cloud_replicate.rs  compare_with_rust_xlsxwriter.rs  compression_level_config.rs  debug_wrapper_overhead.rs  debug_write_row_fast.rs  excel_writer_compression.rs  fast_writer_test.rs  fast_writer_validation.rs  incremental_append.rs  large_dataset_multi_sheet.rs  memory_bench.rs  memory_benchmark.rs  memory_benchmark_read.rs  memory_constrained_write.rs  memory_profile_streaming_reader.rs  memory_usage_test.rs  multi_cloud_config.rs  multi_sheet.rs  performance_optimized.rs  postgres_streaming.rs  postgres_to_excel.rs  postgres_to_excel_advanced.rs  s3_excel_writer.rs  s3_list_test.rs  s3_performance_test.rs  s3_read.rs  s3_read_test.rs  s3_read_write_roundtrip.rs  s3_streaming.rs  s3_test_simple.rs  s3_verify.rs  streaming_write.rs  test_excel_365.rs  test_number_types.rs  three_writers_comparison.rs  verify_postgres_export.rs  (+6 more)
src/: error.rs  lib.rs  reader.rs  streaming_reader.rs  types.rs  writer.rs
src/append/: mod.rs
src/cloud/: mod.rs  replicate.rs  s3_reader.rs  s3_writer.rs
src/fast_writer/: memory.rs  mod.rs  shared_strings.rs  streaming_zip_reader.rs  streaming_zip_writer.rs  ultra_low_memory.rs  workbook.rs  worksheet.rs  xml_writer.rs  zero_temp_workbook.rs
tests/: integration_test.rs
