[package]
name = "excelstream"
version = "0.14.0"
edition = "2021"
authors = ["Ton That Vu <ttvuhm@gmail.com>"]
description = "High-performance streaming Excel & CSV library with S3 cloud support - Read/write large XLSX/CSV files with ultra-low memory"
license = "MIT"
repository = "https://github.com/KSD-CO/excelstream"
keywords = ["excel", "xlsx", "csv", "streaming", "s3"]
categories = ["parsing", "encoding"]
exclude = [
    "*.xlsx",
    "*.xls",
    "examples/*.xlsx",
    "examples/*.xls",
    "tests/data/*.xlsx",
    "tests/data/*.xls",
    "benches/results/",
    "memory_test_*.xlsx",
]

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"], optional = true }
rayon = { version = "1.8", optional = true }
indexmap = "2"
chrono = { version = "0.4", features = ["clock"] }
itoa = "1.0"
# s-zip for streaming ZIP operations (with Zstd compression and cloud storage support)
s-zip = { version = "0.5.1", default-features = false }

# Optional features (only enabled when needed)
# PostgreSQL support (for examples)
postgres = { version = "0.19", features = ["with-chrono-0_4"], optional = true }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"], optional = true }
deadpool-postgres = { version = "0.14", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

# Cloud storage support
aws-config = { version = "1.0", optional = true }
aws-sdk-s3 = { version = "1.0", optional = true }
tempfile = { version = "3.8", optional = true }

# HTTP streaming support (for examples)
axum = { version = "0.7", optional = true }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[features]
default = ["s-zip/zstd-support"]
serde = ["dep:serde"]
parallel = ["dep:rayon"]
postgres = ["dep:postgres"]
postgres-async = ["dep:tokio-postgres", "dep:deadpool-postgres", "dep:tokio"]
cloud-s3 = ["dep:aws-config", "dep:aws-sdk-s3", "dep:tokio", "dep:tempfile", "s-zip/cloud-s3"]
cloud-http = ["dep:axum", "dep:tokio", "dep:tempfile"]
cloud-gcs = []  # Placeholder for future
cloud-azure = []  # Placeholder for future

[[bench]]
name = "streaming_benchmark"
harness = false

[lib]
name = "excelstream"
path = "src/lib.rs"

[[example]]
name = "basic_read"
path = "examples/basic_read.rs"

[[example]]
name = "basic_write"
path = "examples/basic_write.rs"

[[example]]
name = "streaming_read"
path = "examples/streaming_read.rs"

[[example]]
name = "streaming_write"
path = "examples/streaming_write.rs"

[[example]]
name = "postgres_to_excel_advanced"
path = "examples/postgres_to_excel_advanced.rs"
required-features = ["postgres-async"]

[[example]]
name = "postgres_streaming"
path = "examples/postgres_streaming.rs"
required-features = ["postgres"]

[[example]]
name = "http_streaming"
path = "examples/http_streaming.rs"
required-features = ["cloud-http"]

[[example]]
name = "http_memory_test"
path = "examples/http_memory_test.rs"
required-features = ["cloud-http"]
